--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>MNS LOGISTICS</title>
+        <title>Lieth Shehadeh</title>
         <link rel="stylesheet" href="styles.css" type="text/css">
     </head>
     <body>
@@ -13,7 +13,7 @@
                     <a href="#"><img src="MNS Logo.svg"></a>
                 </div>
                 <div class="logo_text">
-                    <a href="#">Mns Logistics</a>
+                    <a href="#">Lieth Shehadeh</a>
                 </div>
                 <div class="hamburger" onclick="openMenu()">
                     <div class="bar1"></div>
