--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a input type="button" onClick="document.getElementById('goals').scrollIntoView();">
                         <li>Goals</li>
                     </a>
-                    <a input type="button" onClick="document.getElementById('navigation').scrollIntoView();">
+                    <a input type="button" onClick="document.getElementById('contact').scrollIntoView();">
                         <li>Contact</li>
                     </a>
                     <a href="Lieth Shehadeh's Resume Comp Sci.pdf" target="_blank">
@@ -45,7 +45,7 @@
             <a input type="button" onClick="document.getElementById('experience').scrollIntoView();">Experience</a>
             <a input type="button" onClick="document.getElementById('projects').scrollIntoView();">Projects</a>
             <a input type="button" onClick="document.getElementById('goals').scrollIntoView();">Goals</a>
-            <a input type="button" onClick="document.getElementById('navigation').scrollIntoView();">Contact</a>
+            <a input type="button" onClick="document.getElementById('contact').scrollIntoView();">Contact</a>
             <a href="Lieth Shehadeh's Resume Comp Sci.pdf" target="_blank">Resume</a>
         </div>
     </h>
@@ -61,7 +61,7 @@
             </div>
             <div id="arrow" class="arrow"><img src="Arrow.png"></div>
         </div>
-        <div id="experience" class="experience">
+        <!-- <div id="experience" class="experience">
             <div class="job">
                 <div class="company">
                     <a>Mondelēz International</a>
@@ -73,15 +73,24 @@
                     <a></a>
                 </div>
             </div>
-        </div>
-        <div id="projects" class="section"><a>Projects</a></div>
+        </div> -->
+        <div id="projects" class="section"><a>Experience</a></div>
         <div class="projects">
             <div class="project">
                 <div class="name">
-                    <a>LiethS.me</a>
+                    <a>Mondelēz International</a>
                 </div>
                 <div class="languages">
-                    <a>HTML, CSS, JavaScript</a>
+                </div>
+                <div class="description"><a></a>
+                </div>
+            </div>
+            <div class="hborder"></div>
+            <div class="project">
+                <div class="name">
+                    <a>MacEwan University</a>
+                </div>
+                <div class="languages">
                 </div>
                 <div class="description">
                     <a></a>
@@ -90,10 +99,52 @@
             <div class="hborder"></div>
             <div class="project">
                 <div class="name">
-                    <a>MazeSolve</a>
+                    <a>eWorx Technology</a>
                 </div>
                 <div class="languages">
-                    <a>Python</a>
+                </div>
+                <div class="description">
+                    <a></a>
+                </div>
+            </div>
+            <div class="hborder"></div>
+            <div class="project">
+                <div class="name">
+                    <a>Fossil</a>
+                </div>
+                <div class="languages">
+                </div>
+                <div class="description">
+                    <a></a>
+                </div>
+            </div>
+        </div>
+        <div id="projects" class="section"><a>Projects</a></div>
+        <div class="projects">
+            <div class="project">
+                <div class="name">
+                    <a>Portfolio</a>
+                </div>
+                <div class="languages"><ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    </ul>
+                </div>
+                <div class="description"><a>You're already here! :D
+
+                        As of right now, my portfolio is incomplete and I would like to do many more things to it to truly make it represent who I am and my passion for programming.
+                    </a>
+                </div>
+            </div>
+            <div class="hborder"></div>
+            <div class="project">
+                <div class="name">
+                    <a>MazeSolve</a>
+                </div>
+                <div class="languages"><ul>
+                    <li>Python</li>
+                    </ul>
                 </div>
                 <div class="description">
                     <a></a>
@@ -104,8 +155,13 @@
                 <div class="name">
                     <a>MyMovieList</a>
                 </div>
-                <div class="languages">
-                    <a>Python, Flask, HTML, CSS, SQL</a>
+                <div class="languages"><ul>
+                    <li>Python</li>
+                    <li>Flask</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>SQL</li>
+                    </ul>
                 </div>
                 <div class="description">
                     <a></a>
@@ -116,23 +172,28 @@
                 <div class="name">
                     <a>Amadeus</a>
                 </div>
-                <div class="languages">
-                    <a>JavaScript, TypeScript, Node.js</a>
+                <div class="languages"><ul>
+                    <li>JavaScript</li>
+                    <li>TypeScript</li>
+                    <li>Node.js</li>
+                    </ul>
                 </div>
                 <div class="description">
                     <a></a>
                 </div>
             </div>
         </div>
-        
-
         <div id="goals" class="goals">
         </div>
         <div id="skills" class="skills">
         </div>
+        <div id="contact" class="contactsection"><a>Contact Information</a></div>
+        <div id="contact" class="contact">
+            <a href="https://www.linkedin.com/in/lieths/"><div>Linkedin: LiethS</div></a>
+            <a href="https://github.com/LiethS"><div>Github: LiethS</div></a>
+            <div>Email: Lieth.munther@gmail.com</div>
+        </div>
     </div>
-    <div class="play">
-        <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
-    </div></body>
+</body>
 
 </html>
